<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="first_name">Caio</string>
    <string name="last_name">Alves</string>
    
    <string name="clear"></string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="discard">Discard</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="drawer_open">Open drawer navigation</string>
    <string name="drawer_close">Navigation drawer Close</string>
    <string name="app_name">Rex</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_edit">Edit</string>
    <string name="action_new">New</string>

    <!-- Examples -->
    <string name="action_example">Example</string>
    <string name="example_title">Example Feature</string>
    <string name="example_description">Just an example</string>

    <!-- Facebook -->
    <string name="app_id">286785121486893</string>
    <string name="login_facebook">Log in with Facebook</string>

    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Mensagens de erro do GPS -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">        Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">        Location update error. code %1$d message %2$s</string>
    <string name="location_update_missing_update">        Location update error. No incoming location.</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">        Can\'t request location updates, previous request hasn\'t finished</string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">        Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">The version of Google Play services on this device is not authentic</string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">The app is not licensed to the user</string>
    <string name="connection_error_message">Connection failure error message: %1$s</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_missing">Google Play services is missing</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_outdated">Google Play services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>

    <!-- Animals -->
    <string name="animal">New Animal</string>
    <string name="title_activity_animal">Animal</string>
    <string name="nothing"></string>

    <!-- Camera -->

    <string name="btnPhoto">Take Photo</string>
    <string name="btnUpload">Upload Photo</string>
    <string name="btnVideo">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_feature_list">Features</string>
    <string name="title_feature_detail">Feature Detail</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="example">Example</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="looking_for">Looking for:</string>
    <string name="search_radius">Search radius:</string>
    <string name="age_between">Age between:</string>
    <string name="invite">Invite</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="album_name">RexPhotos</string>

    <!-- Invite -->
    <string name="subject">Rex App</string>
    <string name="title_activity_invite">Share using&#8230;</string>
    <string name="url_invite_message">https://www.khanacademy.org/profile/CaioMargutti/</string>
    <string name="invite_message">Find your PET a partner and get in touch with its pretty owner at the same time! 
        Try Rex rigth now ;D </string>
    <string name="title_activity_chat">ChatActivity</string>

    <!-- Register -->
    <string name="register">Register</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_re_password">Retype Password</string>

    <!-- Chat -->
    <string name="send">Send</string>
    <string name="prompt_send">Yo, say something! =D</string>

    <!-- Register Animal -->
    <string name="prompt_animal_name">How is your pet called?</string>
    <string name="what_kind">What kind of animal is it?</string>
    <string name="describe">Briefly describe your PET</string>
    <string name="age">How old is it?</string>
    <string name="weight">How much it weights in KG?</string>
    <string name="prompt_weight">Weigth</string>
    <string name="prompt_color1">1st color</string>
    <string name="prompt_color2">2nd color</string>
    <string name="prompt_color3">3rd color</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="xxx">Yo, say something! =D</string>

    <string-array name="animal_family_array">
        <item>Cat</item>
        <item>Dog</item>
    </string-array>

    <!-- Find Partners -->

    <string name="animal_example">Pepê, 10</string>
    <string name="number_loves_example">2014</string>
    <string name="distance_example">1 km</string>

    <!-- EXAMPLES CONTACTS -->
    <string name="marco">Marco Salles</string>
    <string name="antonio">Antonio Forte</string>
    <string name="victoria">Victoria Risso</string>
    <string name="ana">Ana Lemos</string>
    <string name="virgilio">Virgilio Junior</string>
    <string name="intasqui">Felipe Intasqui</string>
    <string name="michelle">Michelle Galindo</string>
    <string name="alemao">Bruno Terakado</string>
    <string name="default_person">Default Person</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="both">Dog and Cat</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_register_animal">RegisterAnimalActivity</string>

</resources>