<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/container"
        style="@style/LoginFormContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Login progress -->

        <LinearLayout
            android:id="@+id/login_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone" >

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="8dp" />
        </LinearLayout>

        <!-- Login form -->

        <LinearLayout
            android:id="@+id/login_form"
            style="@style/LoginFormContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgvRegisterProfile"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/example"
                android:gravity="center"
                android:src="@drawable/human_footprint"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnUploadPhoto"
                    android:layout_width="match_parent"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/btnUpload" />

                <Button
                    android:id="@+id/btnTakePicture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:text="@string/btnPhoto" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnMale"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:text="@string/male"
                    android:textSize="26sp" />

                <Button
                    android:id="@+id/btnFemale"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:text="@string/female"
                    android:textSize="26sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:hint="@string/prompt_first_name"
                    android:inputType="textPersonName"
                    android:minHeight="?android:attr/listPreferredItemHeight" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:hint="@string/prompt_last_name"
                    android:inputType="textPersonName"
                    android:minHeight="?android:attr/listPreferredItemHeight" />
            </LinearLayout>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:singleLine="true" />

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_login"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:singleLine="true" />

            <EditText
                android:id="@+id/rePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_re_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/register" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>