<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LoginFormContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SettingsForm"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtvLooking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:text="@string/looking_for"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnLookingMale"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/male"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnLookingFemale"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/female"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtvSearchRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/search_radius"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtvSearchRadiusResp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="right|center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/example"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/skbRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:maxHeight="?android:attr/listPreferredItemHeight"
            android:minHeight="?android:attr/listPreferredItemHeight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtvAgeBetween"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/age_between"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtvSearchAgeResp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="right|center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/example"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>     
    </LinearLayout>
</ScrollView>